feat: add selectablility to categoriesClickable component

--- a/src/design-system/atoms/categories-clickable/categories-clickable.module.scss
+++ b/src/design-system/atoms/categories-clickable/categories-clickable.module.scss
@@ -15,3 +15,8 @@
   background-color: #f2f5ef;
   color: var(--color-secondary-02);
 }
+
+.active {
+  color: #fff;
+  background-color: var(--color-secondary-02);
+}
