feat: add desktop version of organization type page (#835)

--- a/src/design-system/atoms/type-selector/type-selector.module.scss
+++ b/src/design-system/atoms/type-selector/type-selector.module.scss
@@ -6,8 +6,9 @@
 .item {
   font-size: var(--font-size-m);
   border-radius: 16px;
-  padding: 1rem;
+  padding: 0.75rem;
   position: relative;
+  cursor: pointer;
 }
 
 .active {
