--- a/src/design-system/pages/organization-create/mission/mobile/mobile.module.scss
+++ b/src/design-system/pages/organization-create/mission/mobile/mobile.module.scss
@@ -5,10 +5,6 @@
   grid-template-rows: 3rem 6.75rem 1fr 8rem;
 }
 
-.questionContainer {
-  border-bottom: 1px solid var(--color-gray-03);
-}
-
 .header {
   padding-bottom: 1rem;
   border-bottom: 1px solid var(--color-gray-03);
@@ -30,31 +26,19 @@
   }
 }
 
-.questionContainer {
+.question {
+  padding: 1rem;
+  font-size: 1.25rem;
+  font-family: 'Hahmlet';
+  font-weight: 600;
   display: flex;
-  gap: 0.5rem;
-  flex-direction: column;
-  justify-content: center;
-  padding-left: 1.5rem;
-  color: var(--color-black-01);
-
-  .question {
-    font-size: 1.25rem;
-    font-family: 'Hahmlet';
-    font-weight: 600;
-  }
-
-  .limitStatement {
-    color: var(--color-gray-01);
-  }
+  align-items: center;
 }
 
 .main {
+  padding: 1rem;
+  overflow-y: scroll;
   border-bottom: 1px solid var(--color-gray-03);
-  .input {
-    margin-bottom: 1rem;
-  }
-  overflow: scroll;
 }
 
 .bottom {
