--- a/src/design-system/pages/organization-create/profile/desktop/desktop.module.scss
+++ b/src/design-system/pages/organization-create/profile/desktop/desktop.module.scss
@@ -8,14 +8,67 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgb(102, 102, 102);
-  background-color: var(--color-gray-01);
+  background-color: var(--color-gray-03);
 }
 
 .card {
-  border: 7px solid #000;
-  height: 90vh;
+  display: grid;
+  grid-template-rows: 50px 11rem 1fr 6.75rem;
+  height: 85vh;
   max-height: 900px;
-  width: 600px;
+  width: 35rem;
   overflow: scroll;
+}
+
+.header {
+  border-bottom: 1px solid var(--color-gray-03);
+  display: grid;
+  grid-template-columns: 44px 1fr 44px;
+  align-items: center;
+
+  .chevron {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    cursor: pointer;
+  }
+
+  .stepsContainer {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.questionContainer {
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 1.5rem;
+  color: var(--color-black-01);
+
+  .question {
+    font-size: 1.25rem;
+    font-family: 'Hahmlet';
+    font-weight: 600;
+  }
+
+  .limitStatement {
+    color: var(--color-gray-01);
+  }
+  border-bottom: 1px solid var(--color-gray-03);
+}
+
+.main {
+  padding: 1.5rem 1rem;
+  border-bottom: 1px solid var(--color-gray-03);
+  overflow-y: scroll;
+}
+
+.bottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
 }
