--- a/src/design-system/pages/organization-create/culture/desktop/desktop.module.scss
+++ b/src/design-system/pages/organization-create/culture/desktop/desktop.module.scss
@@ -34,6 +34,11 @@
     display: flex;
     justify-content: center;
   }
+
+  .skip {
+    color: var(--color-primary-01);
+    cursor: pointer;
+  }
 }
 
 .question {
