feat: add header-static-mobile template

--- a/src/design-system/_primitives.scss
+++ b/src/design-system/_primitives.scss
@@ -10,6 +10,7 @@
   --color-gray-03: #bec0c7;
   --color-gray-04: rgba(228, 230, 237, 1);
   --color-neutral-600: #949494;
+  --border-gray-01: #f0f1f5;
 
   --color-error-01: rgba(223, 48, 48, 1);
   --color-success-01: rgba(0, 186, 136, 1);
