feat: add header-static-mobile template

--- a/src/design-system/_primitives.scss
+++ b/src/design-system/_primitives.scss
@@ -9,6 +9,7 @@
   --color-gray-02: #a2a6b6;
   --color-gray-03: #bec0c7;
   --color-gray-04: rgba(228, 230, 237, 1);
+  --border-gray-01: #F0F1F5;
 
   --color-error-01: rgba(223, 48, 48, 1);
   --color-success-01: rgba(0, 186, 136, 1);
