--- a/src/design-system/molecules/contact-item/contact-item.module.scss
+++ b/src/design-system/molecules/contact-item/contact-item.module.scss
@@ -2,7 +2,7 @@
   height: 4.25rem;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #e1e1e1;
+  border-bottom: 1px solid var(--border-gray-01);
   padding: 0 0.75rem;
 }
 
