--- a/src/design-system/atoms/header/header.module.scss
+++ b/src/design-system/atoms/header/header.module.scss
@@ -1,6 +1,6 @@
 .container {
   height: 6rem;
-  border-bottom: 1px solid #c3c8d9;
+  border-bottom: 1px solid var(--border-gray-01);
   background: #fff;
   display: grid;
   grid-template-columns: 60px 1fr 60px;
