--- a/src/design-system/molecules/send-box/send-box.module.scss
+++ b/src/design-system/molecules/send-box/send-box.module.scss
@@ -2,7 +2,7 @@
   height: 2.75rem;
   display: grid;
   gap: 0.75rem;
-  grid-template-columns: 2rem 1fr 2rem;
+  grid-template-columns: 1fr 2rem;
   align-items: center;
 }
 
