feat: add job-card molecule

--- a/src/design-system/_primitives.scss
+++ b/src/design-system/_primitives.scss
@@ -15,8 +15,8 @@
   --border-gray-01: #f0f1f5;
 
   --font-size-s: 0.75rem;
-  --font-size-s2: 0.875rem;
-  --font-size-m: 1rem;
+  --font-size-s2: 0.875rem; // 14px
+  --font-size-m: 1rem; // 16px
   --font-size-l: 1.5rem;
   --font-size-xl: 2.25rem;
   --font-color-primary: #1f2128;
