--- a/src/design-system/atoms/accordion/accordion.module.scss
+++ b/src/design-system/atoms/accordion/accordion.module.scss
@@ -17,6 +17,7 @@ input {
   label {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 1em;
     background: #ffffff;
     font-weight: bold;
