styling create-dialog component

--- a/src/design-system/_primitives.scss
+++ b/src/design-system/_primitives.scss
@@ -1,18 +1,18 @@
 :root {
   --color-primary-01: rgba(47, 71, 134, 1);
   --color-secondary-02: rgba(47, 134, 71, 1);
+  --color-secondary-light: #d2ebc0;
 
   --color-black-01: rgba(2, 3, 5, 1);
   --color-white: rgba(255, 255, 255, 1);
   --color-off-white-01: #f8f8f8;
+  --color-error-01: rgba(223, 48, 48, 1);
+  --color-success-01: rgba(0, 186, 136, 1);
   --color-gray-01: rgba(128, 130, 137, 1);
   --color-gray-02: #a2a6b6;
   --color-gray-03: #bec0c7;
   --color-gray-04: rgba(228, 230, 237, 1);
-  --color-neutral-600: #949494;
-
-  --color-error-01: rgba(223, 48, 48, 1);
-  --color-success-01: rgba(0, 186, 136, 1);
+  --border-gray-01: #f0f1f5;
 
   --font-size-s: 0.75rem;
   --font-size-s2: 0.875rem;
@@ -23,4 +23,6 @@
 
   --safe-area: 8rem;
   --window-height: calc(100vh - var(--safe-area));
+
+  --border-gray-01: #e2e2e2;
 }
