--- a/src/design-system/pages/feed/dialog-review/dialog-review.module.scss
+++ b/src/design-system/pages/feed/dialog-review/dialog-review.module.scss
@@ -23,24 +23,24 @@
 
 .social {
     display: flex;
-    gap: 0.75rem;
+    flex-direction: column;
+    gap: 1rem;
     padding: 1rem;
-    border-bottom: 1px solid var(--border-gray-01);
 }
 
 .text {
     padding: 1rem;
-    min-height: 200px;
+    min-height: 10rem;
     border-bottom: 1px solid var(--border-gray-01);
 }
 
 .image {
-    display: flex;
-    justify-content: flex-end;
-    height: 3rem;
-    align-items: center;
-    padding: 1.25rem;
-    background-color: var(--color-off-white-01);
+    padding: 1rem;
+}
+
+.image img {
+    width: 100%;
+    height: 12rem;
 }
 
 .footer {
