feat: add create-job social-causes page

--- a/src/design-system/pages/job-create/my-jobs/mobile/mobile.module.scss
+++ b/src/design-system/pages/job-create/my-jobs/mobile/mobile.module.scss
@@ -1,6 +1,6 @@
-html {
-  background-color: var(--color-off-white-01);
-}
+// html {
+//   background-color: var(--color-off-white-01);
+// }
 
 .container {
   height: 100vh;
