--- a/src/design-system/pages/search/search.module.scss
+++ b/src/design-system/pages/search/search.module.scss
@@ -1,3 +1,34 @@
 .container {
-    background-color: aquamarine;
+    background-color: #ffffff;
+}
+
+.header {
+    margin-top: var(--safe-area);
+    display: flex;
+    gap: 2rem;
+    border-bottom: 1px solid var(--border-gray-01);
+    padding: 0.62rem 1.43rem;
+}
+
+.search {
+    width: 100%;
+}
+
+.menu {
+    height: 3.5rem;
+    background-color: #ffffff;
+    border-bottom: 1px solid var(--border-gray-01);
+    display: flex;
+    align-items: center;
+    padding: 0 1.43rem;
+}
+
+.result {
+    height: 3.5rem;
+    border-bottom: 1px solid var(--border-gray-01);
+    display: flex;
+    align-items: center;
+    padding: 0 1.43rem;
+    justify-content: space-between;
+    background-color: var(--color-off-white-01);
 }
