--- a/src/design-system/molecules/filter-menu/filter-menu.module.scss
+++ b/src/design-system/molecules/filter-menu/filter-menu.module.scss
@@ -1,17 +1,14 @@
 .container {
     display: flex;
     overflow-x: scroll;
-    gap: 1rem
+    gap: 1rem;
+    align-items: center;
 }
 
 .item {
-    height: 2.25rem;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 0.25rem;
-    padding: 1rem;
-
+    flex-direction: column;
+    position: static;
 }
 
 .item span {
@@ -20,11 +17,35 @@
 
 .active {
     background-color: var(--color-primary-01);
-    padding: 1rem 2rem;
+    padding: 0.5rem 2rem;
     border-radius: 1.25rem;
 }
 
 .active span {
     font-size: 1rem;
     color: #ffffff;
+}
+
+.button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.25rem;
+    width: max-content;
+}
+
+.menuList {
+    background-color: #ffffff;
+    position: absolute;
+    z-index: 27;
+    margin-top: 39px;
+    border: 1px solid var(--border-gray-01);
+    min-width: 120px;
+    text-align: center;
+    border-radius: 0.5rem;
+}
+
+.menuItem {
+    padding: 1rem;
+    border-bottom: 1px solid var(--border-gray-01);
 }
