completed feed page

--- a/src/design-system/organisms/feed-list/feed-list.module.scss
+++ b/src/design-system/organisms/feed-list/feed-list.module.scss
@@ -5,3 +5,10 @@
     padding: 1rem;
     background-color: var(--color-off-white-01);
 }
+
+.seeMore {
+    text-align: center;
+    font-weight: 600;
+    font-size: var(--font-size-s2);
+    color: var(--color-primary-01);
+  }
