--- a/src/design-system/pages/feed/post-detail/mobile/mobile.module.scss
+++ b/src/design-system/pages/feed/post-detail/mobile/mobile.module.scss
@@ -1,5 +1,5 @@
 .container {
-    padding: 0 1rem;
+    padding: 0 1rem 1rem 1rem;
     background-color: var(--color-off-white-01);
 }
 
@@ -14,4 +14,13 @@
     font-weight: bold;
     margin-bottom: 1rem;
 
+}
+
+.sendBox {
+    margin: 1rem 0;
+}
+
+.messages {
+    height: 300px;
+    background-color: aqua;
 }
