--- a/src/design-system/atoms/radio/radio.module.scss
+++ b/src/design-system/atoms/radio/radio.module.scss
@@ -26,7 +26,7 @@
     top: 0;
     width: 1.25rem;
     height: 1.25rem;
-    border: 1px solid var(--color-neutral-600);
+    border: 1px solid var(--color-gray-03);
     border-radius: 100%;
     background: #fff;
 }
