--- a/src/design-system/pages/job-create/info/mobile/mobile.module.scss
+++ b/src/design-system/pages/job-create/info/mobile/mobile.module.scss
@@ -1,8 +1,8 @@
 .container {
-  height: var(--window-height);
-  margin-top: var(--safe-area);
+  height: 100vh;
+  padding-top: var(--safe-area);
   display: grid;
-  grid-template-rows: 3rem 4.875rem 3.75rem 1fr 8rem;
+  grid-template-rows: 3rem 4.875rem 1fr;
 }
 
 .header {
@@ -35,6 +35,7 @@
   justify-content: center;
   padding-left: 1.5rem;
   color: var(--color-black-01);
+  border-bottom: 1px solid var(--border-gray-01);
 
   .question {
     font-size: 1.25rem;
@@ -47,27 +48,42 @@
   }
 }
 
-.search {
-  padding: 0 1rem;
-  display: flex;
-  align-items: center;
-  border-bottom: 1px solid var(--border-gray-01);
-}
-
-.bottom {
-  display: flex;
-  justify-content: center;
-  padding: 1rem 1rem 0 1rem;
-}
-
 .main {
-  padding: 1.5rem 1rem;
-  background-color: var(--color-off-white-01);
+  overflow: scroll;
+  padding: 1.5rem 0;
   border-bottom: 1px solid var(--border-gray-01);
+}
 
-  .categoryTitle {
+.dividerContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.paymentRange {
+  .paymentRangeTitle {
+    margin-bottom: 1rem;
     font-weight: 600;
-    padding-bottom: 1.5rem;
   }
-  overflow-y: scroll;
+  .paymentRangeInputs {
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    input {
+      padding: 0;
+      margin: 0;
+      max-width: 95%;
+    }
+  }
+}
+
+.priceNotifying {
+  padding-top: 0.5rem;
+  color: var(--color-gray-01);
+}
+
+.btnContainer {
+  border-top: 1px solid var(--border-gray-01);
+  height: 6.75rem;
+  padding: 1rem;
 }
