--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Hahmlet&family=Work+Sans');
+@import url(https://fonts.googleapis.com/css?family=Hahmlet:700|Work+Sans:bold);
 @import './design-system/primitives';
 @import './design-system/reset';
