--- a/src/design-system/templates/menu-touch/menu-touch.module.scss
+++ b/src/design-system/templates/menu-touch/menu-touch.module.scss
@@ -17,7 +17,7 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   list-style: none;
   background-color: #ffffff;
-  border-top: 1px solid var(--color-gray-02);
+  border-top: 1px solid var(--border-gray-01);
 }
 
 .navItem {
