--- a/src/design-system/pages/feed/post-detail/mobile/mobile.module.scss
+++ b/src/design-system/pages/feed/post-detail/mobile/mobile.module.scss
@@ -1,19 +1,10 @@
 .container {
     padding: 0 1rem 1rem 1rem;
-    background-color: var(--color-off-white-01);
+    // background-color: var(--color-off-white-01);
 }
 
 .header {
-    height: 4.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1.25rem 0;
-    padding-top: var(--safe-area);
-    font-size: 1.5rem;
-    font-weight: bold;
     margin-bottom: 1rem;
-
 }
 
 .sendBox {
@@ -21,6 +12,5 @@
 }
 
 .messages {
-    // height: 300px;
-    // background-color: aqua;
+    // overflow-y: scroll;
 }
