fixed problem in feed-item

--- a/src/design-system/molecules/feed-item/feed-item.module.scss
+++ b/src/design-system/molecules/feed-item/feed-item.module.scss
@@ -12,3 +12,25 @@
 .text {
     margin: 0.875rem 0;
 }
+
+.header {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.info {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+}
+
+.date {
+    color: var(--color-gray-01);
+}
