--- a/src/design-system/templates/divider/divider.module.scss
+++ b/src/design-system/templates/divider/divider.module.scss
@@ -1,6 +1,6 @@
 .container {
   padding: 1rem;
-  border-bottom: 1px solid #c3c8d9;
+  border-bottom: 1px solid var(--border-gray-01);
 }
 
 .title {
