feat: add job-apply page (#833)

--- a/src/design-system/atoms/textarea/textarea.module.scss
+++ b/src/design-system/atoms/textarea/textarea.module.scss
@@ -1,6 +1,6 @@
 .outline {
   display: grid;
-  grid-template-rows: 1.5rem auto;
+  grid-template-rows: minmax(1.5rem, auto) auto;
   gap: 4px;
 
   .label {
