--- a/src/design-system/_primitives.scss
+++ b/src/design-system/_primitives.scss
@@ -17,7 +17,7 @@
   --font-size-s: 0.75rem;
   --font-size-s2: 0.875rem; // 14px
   --font-size-m: 1rem; // 16px
-  --font-size-l: 1.5rem;
+  --font-size-l: 1.5rem; // 24px
   --font-size-xl: 2.25rem;
   --font-color-primary: #1f2128;
 
