fixed paganition bug in post-detail

--- a/src/design-system/pages/feed/post-detail/mobile/mobile.module.scss
+++ b/src/design-system/pages/feed/post-detail/mobile/mobile.module.scss
@@ -10,12 +10,8 @@
     margin: 1rem 0;
 }
 
-.messages {
-    // overflow-y: scroll;
-}
-
 .main {
     padding: 0 1rem 1rem 1rem;
     overflow-y: scroll;
-    background-color: var(--color-off-white-01);
+    // background-color: var(--color-off-white-01);
 }
