--- a/src/design-system/pages/feed/dialog-review/dialog-review.module.scss
+++ b/src/design-system/pages/feed/dialog-review/dialog-review.module.scss
@@ -6,7 +6,7 @@
 }
 
 .header {
-    height: 4.5rem;
+    // height: 4.5rem;
     background-color: #ffffff;
     display: flex;
     align-items: center;
@@ -14,6 +14,13 @@
     border-bottom: 1px solid var(--border-gray-01);
     padding: 1.25rem;
     padding-top: var(--safe-area);
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.main {
+    padding-top: 11rem;
 }
 
 .title {
@@ -31,7 +38,9 @@
 .text {
     padding: 1rem;
     min-height: 10rem;
+    overflow-y: scroll;
     border-bottom: 1px solid var(--border-gray-01);
+    line-height: 1.5;
 }
 
 .image {
