--- a/src/design-system/molecules/impact-category-item/impact-category-item.module.scss
+++ b/src/design-system/molecules/impact-category-item/impact-category-item.module.scss
@@ -15,10 +15,7 @@
 
 .label {
   height: 40px;
-  font-weight: 600;
+  padding-top: 0.25rem;
+  font-size: var(--font-size-s);
   text-align: center;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
 }
