--- a/src/design-system/pages/achievements/mobile/header/header.module.scss
+++ b/src/design-system/pages/achievements/mobile/header/header.module.scss
@@ -18,6 +18,7 @@
 .impactPoints {
   font-size: 4rem;
   font-weight: 700;
+  color: #ffffff;
 }
 
 .buttonContainer {
@@ -27,10 +28,12 @@
 
 .impactPointsLabel {
   font-size: 1.25rem;
+  color: #ffffff;
 }
 
 .impactPointDescLink {
   font-weight: 400;
   text-align: center;
   margin-top: 1rem;
+  color: #fff;
 }
