fix: mission page in create org process

--- a/src/design-system/pages/organization-create/profile/mobile/mobile.module.scss
+++ b/src/design-system/pages/organization-create/profile/mobile/mobile.module.scss
@@ -51,10 +51,12 @@
 
 .main {
   border-bottom: 1px solid var(--color-gray-03);
-  .input {
-    margin-bottom: 1rem;
-  }
   overflow: scroll;
+}
+
+.formContainer{
+  display: grid;
+  gap: 1rem;
 }
 
 .bottom {
