--- a/src/design-system/atoms/input/input.module.scss
+++ b/src/design-system/atoms/input/input.module.scss
@@ -4,6 +4,7 @@
   gap: 4px;
 
   .textbox {
+    width: 100%;
     border-bottom: 2px solid #e4e6ed;
     font-size: var(--font-size-m);
 
@@ -23,6 +24,7 @@
   }
 
   .textbox {
+    width: 100%;
     border: 1px solid var(--color-gray-04);
     font-size: var(--font-size-m);
     background: #fff;
