--- a/src/design-system/pages/organization-create/profile/mobile/mobile.module.scss
+++ b/src/design-system/pages/organization-create/profile/mobile/mobile.module.scss
@@ -6,12 +6,12 @@
 }
 
 .questionContainer {
-  border-bottom: 1px solid var(--color-gray-03);
+  border-bottom: 1px solid var(--border-gray-01);
 }
 
 .header {
   padding-bottom: 1rem;
-  border-bottom: 1px solid var(--color-gray-03);
+  border-bottom: 1px solid var(--border-gray-01);
   display: grid;
   grid-template-columns: 44px 1fr 44px;
   align-items: center;
@@ -50,11 +50,11 @@
 }
 
 .main {
-  border-bottom: 1px solid var(--color-gray-03);
+  border-bottom: 1px solid var(--border-gray-01);
   overflow: scroll;
 }
 
-.formContainer{
+.formContainer {
   display: grid;
   gap: 1rem;
 }
@@ -63,4 +63,19 @@
   display: flex;
   justify-content: center;
   padding: 1rem 1rem 0 1rem;
+}
+
+.phoneNumber {
+  display: grid;
+  grid-template-columns: 5rem 1fr;
+  gap: 1rem;
+}
+.phoneNumberLabel {
+  font-weight: 700;
+  padding-bottom: 0.5rem;
+  .labelOptional {
+    color: var(--color-gray-02);
+    font-weight: 400;
+    font-size: var(--font-size-s);
+  }
 }
