--- a/src/design-system/pages/job-detail/job-detail.module.scss
+++ b/src/design-system/pages/job-detail/job-detail.module.scss
@@ -8,3 +8,13 @@
   font-size: var(--font-size-m);
   color: var(--color-black-01);
 }
+
+.appSubmitted {
+  height: 2.8rem;
+  background: var(--color-off-white-01);
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  margin-left: 1rem;
+  font-weight: 700;
+}
