--- a/src/pages/menu/mobile/mobile.module.scss
+++ b/src/pages/menu/mobile/mobile.module.scss
@@ -91,7 +91,10 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  border: 1px solid var(--border-gray-01);
+  border-bottom: 1px solid var(--border-gray-01);
+  &:last-child {
+    border-bottom: 0;
+  }
 }
 
 .title {
