fix: change password

--- a/src/pages/change-password/change-password.module.scss
+++ b/src/pages/change-password/change-password.module.scss
@@ -1,13 +1,10 @@
-.top {
-  padding: 3rem 2rem 0 2rem;
-}
-
 .header {
-  height: 5.875rem;
-  margin-bottom: 2rem;
+  height: auto;
+  margin: 1rem 0;
 }
 
 .form {
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
