--- a/src/components/atoms/textarea/textarea.module.scss
+++ b/src/components/atoms/textarea/textarea.module.scss
@@ -11,6 +11,7 @@
     border: 1px solid var(--color-gray-04);
     font-size: var(--font-size-m);
     background: #fff;
+    transition: border-color 100ms 0s;
     border-radius: 8px;
     padding: 0.75rem;
 
