--- a/src/components/atoms/checkbox/checkbox.module.scss
+++ b/src/components/atoms/checkbox/checkbox.module.scss
@@ -11,7 +11,7 @@
 
 input[type='checkbox'] {
   position: relative;
-//   border: 1px solid var(--color-neutral-600);
+  //   border: 1px solid var(--color-neutral-600);
   border: 1px solid var(--color-gray-02);
   border-radius: 2px;
   background: none;
@@ -23,6 +23,7 @@ input[type='checkbox'] {
   vertical-align: text-top;
   height: 1.5rem;
   width: 1.5rem;
+  min-width: 1.5rem;
   opacity: 0.5;
   border-radius: 4px;
 }
