feat: add tags to awaiting review accordian

--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -8,6 +8,7 @@
   --color-off-white-01: #f8f8f8;
   --color-error-01: rgba(223, 48, 48, 1);
   --color-success-01: rgba(0, 186, 136, 1);
+  --color-warning-01: #f4b740;
   --color-gray-01: rgba(128, 130, 137, 1);
   --color-gray-02: #a2a6b6;
   --color-gray-03: #bec0c7;
