--- a/src/pages/offer-received/mobile/mobile.module.scss
+++ b/src/pages/offer-received/mobile/mobile.module.scss
@@ -5,6 +5,25 @@
   flex-direction: column;
 }
 
+.acceptedMessageBox {
+  padding: 12px;
+  display: grid;
+  grid-template-columns: 44px 1fr;
+  background-color: #ebb957;
+  .congratulationsText {
+    line-height: 20px;
+    font-size: var(--font-size-s2);
+  }
+  .congratulationsText:first-child {
+    font-weight: 600;
+    padding-bottom: 4px;
+  }
+
+  .companyName {
+    font-weight: 600;
+  }
+}
+
 .congratulations {
   padding: 12px;
   display: grid;
@@ -12,6 +31,7 @@
   background-color: var(--color-success-01);
   .congratulationsText {
     color: #fff;
+    line-height: 20px;
     font-size: var(--font-size-s2);
   }
   .congratulationsText:first-child {
