fix: city filtering

--- a/src/components/atoms/dropdown-v2/dropdown.module.scss
+++ b/src/components/atoms/dropdown-v2/dropdown.module.scss
@@ -48,3 +48,9 @@
   opacity: 1;
   height: auto;
 }
+
+.helperText {
+  opacity: 0.5;
+  padding-left: 0.5rem;
+  font-size: var(--font-size-s2);
+}
