feat: add achievement page link to profile page

--- a/src/pages/profile/mobile/mobile.module.scss
+++ b/src/pages/profile/mobile/mobile.module.scss
@@ -45,6 +45,11 @@
   }
 }
 
+.achievements {
+  border-radius: 10px;
+  padding: 1rem;
+}
+
 .userConnections {
   margin-top: 1rem;
   display: flex;
