--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,10 @@
 @import url(https://fonts.googleapis.com/css?family=Hahmlet:700|Work+Sans:bold);
 @import './components/primitives';
 @import './components/reset';
+
+.hydrated {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  width: 100vw;
+}
