fix: styling issue that action-sheet component caused

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,9 +3,9 @@
 @import './components/primitives';
 @import './components/reset';
 
-.hydrated {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  width: 100vw;
-}
+// .hydrated {
+//   position: fixed;
+//   right: 0;
+//   bottom: 0;
+//   width: 100vw;
+// }
