--- a/src/index.scss
+++ b/src/index.scss
@@ -3,9 +3,9 @@
 @import './components/primitives';
 @import './components/reset';
 
-// .hydrated {
-//   position: fixed;
-//   right: 0;
-//   bottom: 0;
-//   width: 100vw;
-// }
+pwa-action-sheet {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  width: 100vw;
+}
