--- a/src/pages/achievements/mobile/header/header.module.scss
+++ b/src/pages/achievements/mobile/header/header.module.scss
@@ -1,6 +1,6 @@
 .container {
-  height: 23.5rem;
-  max-height: 23.5rem;
+  height: 29rem;
+  max-height: 29rem;
   background: linear-gradient(166.7deg, #00ba88 23.58%, #2f4786 89.68%);
   color: #ffffff;
   font-family: sans-serif;
@@ -9,6 +9,13 @@
   align-items: center;
   justify-content: center;
   padding: 0 4.5rem;
+}
+
+.chevron {
+  position: absolute;
+  left: 1.5rem;
+  top: 4.5rem;
+  filter: invert(1);
 }
 
 .impactPointsContainer {
