fix: searched result clickablity

--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -24,6 +24,7 @@
 
   --safe-area: 8rem;
   --window-height: calc(100vh - var(--safe-area));
+  --menu-height: 5.18rem;
 
   --border-gray-01: #e2e2e2;
 }
