--- a/src/pages/sidebar/mobile/mobile.module.scss
+++ b/src/pages/sidebar/mobile/mobile.module.scss
@@ -11,6 +11,7 @@
   background-color: rgba(119, 119, 119, 0.7);
   transition: opacity 180ms 0s;
   backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
 }
 
 .sidebar {
