--- a/src/pages/profile-edit/mobile/mobile.module.scss
+++ b/src/pages/profile-edit/mobile/mobile.module.scss
@@ -15,3 +15,63 @@
   margin-bottom: 0.5rem;
   font-weight: 600;
 }
+
+.header {
+  height: 13rem;
+  max-height: 13rem;
+  background-color: var(--color-off-white-01);
+  border-bottom: 1px solid var(--border-gray-01);
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.coverImage {
+  width: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.photoIcon {
+  position: relative;
+  z-index: 3;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  width: 2.625rem;
+  height: 2.625rem;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profileImgContainer {
+  position: absolute;
+  overflow: hidden;
+  z-index: 1;
+  width: 128px;
+  height: 128px;
+  background-color: rgba(136, 136, 136, 0.5);
+  left: 1rem;
+  bottom: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: 2px solid rgba(106, 106, 106, 0.2);
+
+  .photoIcon {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+}
+
+.profileImage {
+  width: 100%;
+}
