--- a/src/components/atoms/header-v2/header.module.scss
+++ b/src/components/atoms/header-v2/header.module.scss
@@ -1,7 +1,7 @@
 .container {
   height: 100%;
   display: grid;
-  grid-template-columns: 44px 1fr 44px;
+  grid-template-columns: 44px 1fr auto;
   justify-items: center;
   align-items: end;
   border-bottom: 1px solid var(--border-gray-01);
@@ -19,4 +19,14 @@
 
 .back {
   width: 3.25rem;
+}
+
+.headerLabel {
+  height: 3.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1rem;
+  font-size: var(--font-size-m);
+  color: rgba(47, 71, 134, 1);
 }
