feat: add tier-badge component

--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -15,7 +15,7 @@
   --color-gray-04: rgba(228, 230, 237, 1);
   --border-gray-01: #f0f1f5;
 
-  --font-size-s: 0.75rem;
+  --font-size-s: 0.75rem; // 12px
   --font-size-s2: 0.875rem; // 14px
   --font-size-m: 1rem; // 16px
   --font-size-l: 1.5rem; // 24px
