--- a/src/components/templates/payment-methods/payment-methods.module.scss
+++ b/src/components/templates/payment-methods/payment-methods.module.scss
@@ -7,6 +7,7 @@ $color-blue-dark: #2f4786;
   flex-direction: column;
   align-items: center;
   padding: 24px;
+  gap: 1rem;
 
   &__btn {
     margin-bottom: 16px;
