--- a/src/pages/achievements/components/tier/tier.module.scss
+++ b/src/pages/achievements/components/tier/tier.module.scss
@@ -1,4 +1,25 @@
-.tier {
-  border: 1px solid #000;
-  background: yellow;
+.tierContainer {
+  margin: 1rem;
+  margin-bottom: 0;
+  height: 6rem;
+  border-radius: 1rem;
+  position: relative;
+  overflow: hidden;
+  background: #249388;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+}
+
+.tierLabel {
+  font-weight: 600;
+  font-size: var(--font-size-l);
+  color: #fff;
+  padding-left: 1rem;
 }
