--- a/src/pages/profile/mobile/mobile.module.scss
+++ b/src/pages/profile/mobile/mobile.module.scss
@@ -47,7 +47,21 @@
 
 .achievements {
   border-radius: 10px;
+  min-height: 4rem;
+  background-color: var(--color-off-white-01);
   padding: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.achievementsLink {
+  margin-left: auto;
+  color: #2F4786;
+}
+
+.badges {
+  display: flex;
+  gap: 0.25rem;
 }
 
 .userConnections {
