--- a/src/components/templates/payment-methods/payment-methods.module.scss
+++ b/src/components/templates/payment-methods/payment-methods.module.scss
@@ -10,8 +10,8 @@ $color-blue-dark: #2f4786;
   gap: 1rem;
 
   &__btn {
-    margin-bottom: 16px;
-    padding: 0 16px;
+    margin-bottom: 1rem;
+    padding: 0 1rem;
   }
 
   &__connected {
@@ -26,6 +26,35 @@ $color-blue-dark: #2f4786;
     overflow: hidden;
     max-width: 100%;
     color: var(--color-primary-01);
+  }
+
+  &__cards {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+
+  &__card {
+    width: 100%;
+    max-width: 400px;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+    cursor: pointer;
+
+    &--select {
+      flex: 1;
+    }
+  }
+
+  &__actions {
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
   }
 
   &__text {
