feat: update branding fonts

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,5 +19,5 @@ pwa-action-sheet {
   font-family: Work Sans;
   font-weight: 600;
   font-weight: bold;
-  src: url('/fonts/Inter-Black.woff2');
+  src: url('/fonts/Inter-Regular.woff2');
 }
