feat: update bold fonts to Inter-semiBold

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,12 +12,12 @@ pwa-action-sheet {
 
 @font-face {
   font-family: Work Sans;
-  src: url('/fonts/Inter-Medium.woff2');
+//   src: url('/fonts/Inter-Medium.woff2');
+  src: url('/fonts/Inter-Regular.woff2');
 }
 
 @font-face {
   font-family: Work Sans;
   font-weight: 600;
-  font-weight: bold;
-  src: url('/fonts/Inter-Regular.woff2');
+  src: url('/fonts/Inter-SemiBold.woff2');
 }
