feat(jobs): add desktop version

--- a/src/components/organisms/job-list/job-list.module.scss
+++ b/src/components/organisms/job-list/job-list.module.scss
@@ -41,4 +41,6 @@
   font-weight: 600;
   font-size: var(--font-size-s2);
   color: var(--color-primary-01);
+  cursor: pointer;
+  padding-bottom: 2rem;
 }
